kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: beerlog
  name: beerlog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: beerlog
  strategy: {}
  template:
    metadata:
      labels:
        app: beerlog
    spec:
      containers:
      - image: joaolfms/beerlog:2.0
        name: beerlog
        ports:
        - containerPort: 8000
        resources: {}
status: {}
