kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: 34.72.154.197.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: beerlog
            port:
              number: 8000
